# lh_manager

./: .gitignore  README.md  app.py  bedlayout.py  flask_app_lh.py  flask_mpld3.yml  gsioc_test_device.py  layoutmap.py  monitor_trilution.py  pyproject.toml  requirements.txt  samplelist.py  start_trilution.py  test_gilsonethernet.py  test_gx271_tcp.py  test_gx271_udp.py  test_local_connect.py  test_pywinauto_import.py  util.py
app/: app.py  lhqueue.py
app/gui/: endpoints.py
app/gui_api/: __init__.py  endpoints.py  events.py
app/lh_api/: __init__.py  endpoints.py
app/liquid_handler/: __init__.py  bedlayout.py  dryrun.py  formulation.py  items.py  layoutmap.py  lhqueue.py  persist.py  samplecontainer.py  samplelist.py  state.py
app/nice_api/: endpoints.py
app/state/: __init__.py  state.py
app/static/: index.html  index_vue.html  package.json
app/templates/: index.html  test_emit.html
lh_manager/: app.py  app_config.py  nice_app.py
lh_manager/autocontrol/: autocontrol.py
lh_manager/client/: __init__.py  client.py
lh_manager/gui_api/: endpoints.py  events.py
lh_manager/lh_api/: endpoints.py
lh_manager/liquid_handler/: bedlayout.py  devices.py  dilution.py  distributionmethods.py  formulation.py  history.py  injectionmethods.py  layoutmap.py  lhinterface.py  lhmethods.py  lhqueue.py  methods.py  notify.py  qcmd.py  qcmdmethods.py  rinsemethods.py  roadmapmethods.py  samplecontainer.py  samplelist.py  state.py
lh_manager/material_db/: __init__.py  db.py  endpoints.py
lh_manager/nice_api/: endpoints.py  nice.py
lh_manager/static/: README.md  index_vue.html  package.json
lh_manager/waste_manager/: __init__.py  endpoints.py  events.py  waste.py  wastedata.py
liquid_handler_api/: app.py  app_config.py  lh_interface_app.py  nice_app.py
liquid_handler_api/autocontrol/: autocontrol.py
liquid_handler_api/gui_api/: endpoints.py  events.py
liquid_handler_api/lh_api/: endpoints.py
liquid_handler_api/liquid_handler/: autocontrol.py  bedlayout.py  devices.py  (+21 more)
logs/: .gitignore
persistent_state/: .gitignore
templates/: index.html
(+54 files in other folders)
