[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lh_manager"
dependencies = [
  "flask",
  "flask-socketio",
  "simple-websocket",
  "pydantic",
  "numpy",
  "scipy"
]
version = "0.0.2"
authors = [
  { name="David Hoogerheide", email="david.hoogerheide@nist.gov" },
  { name="Brian Maranville", email="brian.maranville@nist.gov" },
]
description = """\
Central server to manage Gilson Liquid Handler automation, 
running as a NICE device for selecting samples to run,
and supporting web-based GUI for configuration and operation
"""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/roadmap-automation/lh_manager"
"Bug Tracker" = "https://github.com/roadmap-automation/lh_manager/issues"

[tool.setuptools]
package-dir = {"lh_manager" = "lh_manager"}
